[package]
name = "bevy_bsml"
version = "0.0.1"
description = "Bevy UI library inspired by svelte and tailwindcss"
edition = "2021"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
documentation = "https://docs.rs/bevy_bsml"
repository = "https://github.com/poonesnerfect/bevy_bsml"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
derive_more = "0.99.17"
