[package]
name = "bevy_bsml"
version = "0.14.6"
description = "A UI library to compose UI elements using simple markup language, inspired by svelte and tailwindcss"
edition = "2021"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
documentation = "https://docs.rs/bevy_bsml"
repository = "https://github.com/poonesnerfect/bevy_bsml"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.14.1", default-features = false }
bevy_color = { version = "0.14.1", default-features = false }
bevy_ecs = { version = "0.14.1", default-features = false }
bevy_hierarchy = { version = "0.14.1", default-features = false }
bevy_render = { version = "0.14.1", default-features = false }
bevy_text = { version = "0.14.1", default-features = false }
bevy_ui = { version = "0.14.1", default-features = false, features = ["bevy_text"] }
derive_more = "0.99"
replace_ident = { version = "0.1.1", path="replace_ident" }

[dev-dependencies]
bevy = { version = "0.14.1" }
